bugfix for exe file start